--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
+    "mongoose": "^4.10.3",
     "ws": "^3.0.0"
   }
 }
-
